# pokerrust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: abstraction.rs  builder.rs  combination_map.rs  cuda_interface.rs  enums.rs  evaluator.rs  game.rs  main.rs  permutation_handler.rs  simd.rs  state.rs  strategy.rs  vector.rs
src/cuda/: builder.cu  evaluator.cu  evaluator.cuh  interface.cu  poker.cu  structs.h
