[package]
name = "pokerrust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker = { git = "https://github.com/gustafbergmark/poker.git" }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.104"
serde_json_any_key = "2.0.0"
bincode = "1.3.3"

itertools = "0.10.5"
approx = "0.5.1"
assert_approx_eq = "1.1.0"
rayon = "1.8.0"

[build-dependencies]
cc = "1.0.83"